# product-config-demo

./: Cargo.toml  README.adoc
src/: main.rs  versioning.rs
src/product_config/: v1.rs  v2.rs  v3.rs
